# shuttlings-cch24

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
migrations/: 1_create_quotes.up.sql
src/: day0.rs  day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  main.rs
templates/: ornament.html  present.html  star.html  styling.html
