[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
shuttle-axum = "0.49"
shuttle-runtime = "0.49"

cargo-manifest = "0.17"
toml = "0.8"
serde_json = "1.0"
serde_yml = "0.0"
serde = { version = "1.0", features = ["derive"] }
leaky-bucket = "1.1.2"
rand = "0.8"