[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"]}
shuttle-axum = "0.49"
shuttle-runtime = "0.49"

cargo-manifest = "0.17"
toml = "0.8"
serde_json = "1.0"
serde_yml = "0.0"
serde = { version = "1.0", features = ["derive"] }
leaky-bucket = "1.1"
rand = "0.8"
jsonwebtoken = { version =  "9.3", features = ["use_pem"] }
shuttle-shared-db = { version = "0.49" , features = ["postgres", "sqlx"]}
sqlx = { version = "0.8", features = ["postgres","chrono", "uuid", "migrate"] }
tower-http = { version = "0.6", features = ["fs"] }
askama = "0.12"